fix: username alignment

--- a/public/css/post-card.css
+++ b/public/css/post-card.css
@@ -14,6 +14,7 @@
 .user-info .user-name {
     font-size: var(--font-size-subtitle);
     margin-left: 5px;
+    padding-top: 3px;
 }
 
 .title {
